--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -196,6 +196,31 @@
             app:layout_constraintStart_toEndOf="@+id/mDT14"
             app:layout_constraintTop_toBottomOf="@+id/mDT8" />
 
+
+        <TextView
+            android:id="@+id/mDT16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="RecyclerView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mDT11" />
+
+
+        <TextView
+            android:id="@+id/mDT17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:layout_marginStart="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="58loading动画"
+            app:layout_constraintStart_toEndOf="@+id/mDT16"
+            app:layout_constraintTop_toBottomOf="@+id/mDT11" />
+
         <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
