控件模糊，效果不是很好哦。全屏遮罩显示多级菜单。适配器模式

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white30">#4CFFFFFF</color>
+    <color name="white20">#33FFFFFF</color>
     <color name="white60">#99FFFFFF</color>
     <color name="white80">#ccFFFFFF</color>
 
