--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -221,6 +221,19 @@
             app:layout_constraintStart_toEndOf="@+id/mDT16"
             app:layout_constraintTop_toBottomOf="@+id/mDT11" />
 
+
+        <TextView
+            android:id="@+id/mDT18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:layout_marginStart="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="58选择遮罩"
+            app:layout_constraintStart_toEndOf="@+id/mDT17"
+            app:layout_constraintTop_toBottomOf="@+id/mDT11" />
+
         <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
