贝塞尔曲线  气泡拖动

--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -152,8 +152,8 @@
             android:id="@+id/mDT12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="九宫格"
@@ -164,8 +164,8 @@
             android:id="@+id/mDT13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="MD设计"
@@ -176,8 +176,8 @@
             android:id="@+id/mDT14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="MD状态栏"
@@ -188,8 +188,8 @@
             android:id="@+id/mDT15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="MDBehavior"
@@ -213,8 +213,8 @@
             android:id="@+id/mDT17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="58loading动画"
@@ -226,24 +226,37 @@
             android:id="@+id/mDT18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="58选择遮罩"
             app:layout_constraintStart_toEndOf="@+id/mDT17"
             app:layout_constraintTop_toBottomOf="@+id/mDT11" />
+
         <TextView
             android:id="@+id/mDT19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="圆形loading"
             app:layout_constraintStart_toEndOf="@+id/mDT18"
             app:layout_constraintTop_toBottomOf="@+id/mDT11" />
+
+
+        <TextView
+            android:id="@+id/mDT20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="QQ气泡"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mDT16" />
 
         <TextView
             android:id="@+id/mDT30"
