--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -17,7 +17,6 @@
             android:id="@+id/mDT1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d5"
             android:layout_marginEnd="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
@@ -30,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/d10"
-            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="仿QQ运动步数"
@@ -44,7 +42,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/d10"
-            android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
             android:text="可以变色的TextView"
@@ -268,6 +265,19 @@
             android:padding="@dimen/d5"
             android:text="QQ气泡"
             app:layout_constraintStart_toEndOf="@+id/mDT20"
+            app:layout_constraintTop_toBottomOf="@+id/mDT16" />
+
+
+        <TextView
+            android:id="@+id/mDT22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="点赞"
+            app:layout_constraintStart_toEndOf="@+id/mDT21"
             app:layout_constraintTop_toBottomOf="@+id/mDT16" />
 
         <TextView
