--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -280,6 +280,20 @@
             app:layout_constraintStart_toEndOf="@+id/mDT21"
             app:layout_constraintTop_toBottomOf="@+id/mDT16" />
 
+
+        <TextView
+            android:id="@+id/mDT23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="视差动画"
+            app:layout_constraintStart_toEndOf="@+id/mDT22"
+            app:layout_constraintTop_toBottomOf="@+id/mDT16" />
+
+
         <TextView
             android:id="@+id/mDT30"
             android:layout_width="wrap_content"
