--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -108,6 +108,7 @@
     <color name="blue">#00C6FF</color>
     <color name="green">#00E099</color>
     <color name="pink">#FF3891</color>
+    <color name="sss">#B010</color>
 
     <array name="splash_circle_colors">
         <item>@color/blue</item>
