渐变透明导航栏

--- a/app/src/main/res/layout/aty_material_design.xml
+++ b/app/src/main/res/layout/aty_material_design.xml
@@ -103,6 +103,18 @@
             app:layout_constraintStart_toEndOf="@+id/mT9"
             app:layout_constraintTop_toBottomOf="@+id/mT1" />
 
+
+        <TextView
+            android:id="@+id/mT11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/d5"
+            android:layout_marginTop="@dimen/d5"
+            android:background="@drawable/shape_corner_button"
+            android:padding="@dimen/d5"
+            android:text="透明效果"
+            app:layout_constraintStart_toEndOf="@+id/mT10"
+            app:layout_constraintTop_toBottomOf="@+id/mT1" />
         <TextView
             android:id="@+id/mT5"
             android:layout_width="wrap_content"
