--- a/app/src/main/res/layout/aty_memory_life_three.xml
+++ b/app/src/main/res/layout/aty_memory_life_three.xml
@@ -6,17 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.memory.MemoryNewActivity">
 
-    <com.mao.cn.learnDevelopProject.wedget.view.DroidCardsView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-
-    <Button
+    <TextView
         android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="lifeClick"
-        android:text="测试基本standard的生命周期"
+        android:text="测试基本singleTop的生命周期"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,30 +23,11 @@
         android:id="@+id/test1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="lifeClickSingleTop"
-        android:text="测试基本singleTop的生命周期"
+        android:onClick="lifeClickSone"
+        android:text="启动普通的activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/test" />
 
-
-    <Button
-        android:id="@+id/test2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="lifeClickSingleTask"
-        android:text="测试基本singleTask的生命周期"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test1" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="lifeClickSingleInstance"
-        android:text="测试基本singleInstance的生命周期"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/test2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
