构建者设计模式

--- a/app/src/main/res/layout/frg_main_guide.xml
+++ b/app/src/main/res/layout/frg_main_guide.xml
@@ -170,6 +170,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="自定义view,重新来" />
+
+
+                <Button
+                    android:id="@+id/btnDesignPattern"
+                    style="@style/home_main_text_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="设计模式" />
+
+
             </LinearLayout>
         </LinearLayout>
 
