简单工厂设计模式

--- a/app/src/main/res/layout/aty_design_pattern_demo.xml
+++ b/app/src/main/res/layout/aty_design_pattern_demo.xml
@@ -44,7 +44,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="圆圈进度条"
+            android:text="工厂设计模式"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
