--- a/app/src/main/res/layout/aty_factory_design.xml
+++ b/app/src/main/res/layout/aty_factory_design.xml
@@ -51,6 +51,26 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <TextView
+        android:id="@+id/tvDesc3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="回去缓存数据"
+        app:layout_constraintTop_toBottomOf="@+id/tvDesc2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/tvDesc4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="回去缓存数据"
+        app:layout_constraintTop_toBottomOf="@+id/tvDesc3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
 
 
 
