--- a/app/src/main/res/layout/aty_design_pattern_demo.xml
+++ b/app/src/main/res/layout/aty_design_pattern_demo.xml
@@ -57,7 +57,7 @@
             android:layout_marginTop="@dimen/d5"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="Rating bar"
+            android:text="观察者模式"
             app:layout_constraintStart_toEndOf="@+id/mDT3"
             app:layout_constraintTop_toBottomOf="@+id/mDT1" />
 
