--- a/app/src/main/res/layout/aty_define_view_demo.xml
+++ b/app/src/main/res/layout/aty_define_view_demo.xml
@@ -312,7 +312,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/shape_corner_button"
             android:padding="@dimen/d5"
-            android:text="Linnar"
+            android:text="onTouch"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/mDT32"
             app:layout_constraintStart_toEndOf="@+id/mDT30" />
