--- a/app/src/main/res/layout/aty_memory.xml
+++ b/app/src/main/res/layout/aty_memory.xml
@@ -26,7 +26,7 @@
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="获取 TextView 的绘制高度"
+            android:text="hide/showFragment"
             android:textColor="@color/c_69C614"
             android:textSize="@dimen/text_size_28"
             android:textStyle="bold" />
@@ -36,7 +36,7 @@
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="获取 TextView 的绘制高度"
+            android:text="replace切换fragment"
             android:textColor="@color/c_69C614"
             android:textSize="@dimen/text_size_28"
             android:textStyle="bold" />
