--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="parallax_tag" type="id"/>
     <item name="parallax_tag_1" type="id"/>
     <item name="parallax_tag_2" type="id"/>
+    <item name="movie_tab_item_id" type="id"/>
 </resources>
