--- a/app/src/main/res/layout/frg_movie_main.xml
+++ b/app/src/main/res/layout/frg_movie_main.xml
@@ -14,4 +14,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <TextView
+        android:id="@+id/tvDest111"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="home1111"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest" />
+
+
+    <TextView
+        android:id="@+id/tvDest111111"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="home1111"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest111" />
+
+    <TextView
+        android:id="@+id/tvDest11111111"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="home1111"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest111111" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
