--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -79,6 +79,7 @@
     <color name="black90">#E6000000</color>
     <color name="black95">#F2000000</color>
     <color name="black100">#ff000000</color>
+    <color name="c_B5000000">#B5000000</color>
 
     <color name="windowBackground">#F4F4F4</color>
     <color name="colorPrimary">#FFFFFF</color>
