--- a/app/src/main/res/layout/aty_lottie.xml
+++ b/app/src/main/res/layout/aty_lottie.xml
@@ -8,22 +8,21 @@
 
     <include layout="@layout/include_header" />
 
-    <!-- <com.airbnb.lottie.LottieAnimationView
+     <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/lottieAnimationView"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="@dimen/d20"
+         android:layout_height="@dimen/d20"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"
-         app:lottie_rawRes="@raw/yindao_data4" />
- -->
+         app:lottie_rawRes="@raw/video_data" />
 
-    <com.airbnb.lottie.LottieAnimationView
+   <!-- <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:lottie_autoPlay="true"
         app:lottie_fileName="yindao_data4.json"
         app:lottie_imageAssetsFolder="images/"
-        app:lottie_loop="true" />
+        app:lottie_loop="true" />-->
 
 </LinearLayout>
