更新忽略文件

--- a/app/src/main/res/layout/frg_movie_main.xml
+++ b/app/src/main/res/layout/frg_movie_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,6 +19,7 @@
     <TextView
         android:id="@+id/tvDest111"
         android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:text="home1111"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +31,8 @@
         android:id="@+id/tvDest111111"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="home1111"
+        android:text="home hello "
+        android:layout_marginTop="10dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,11 +42,24 @@
         android:id="@+id/tvDest11111111"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="home1111"
-        android:textSize="20sp"
+        android:text="test"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDest111111" />
+
+
+
+    <TextView
+        android:id="@+id/tvDestM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        tools:text="test"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDest11111111" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
