--- a/app/src/main/res/layout/frg_main_guide.xml
+++ b/app/src/main/res/layout/frg_main_guide.xml
@@ -221,6 +221,14 @@
                     android:text="activity utils" />
 
 
+                <Button
+                    android:id="@+id/btnBanner"
+                    style="@style/home_main_text_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="banner" />
+
+
 
             </LinearLayout>
         </LinearLayout>
